# execution-engine-multi

./: .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  PRODUCTION_READINESS.md  PRODUCTION_TODO.md  config.example.yaml  engine.spec  install_manager.ps1  install_service.ps1  pyproject.toml  requirements.txt
.github/workflows/: production-gates.yml
.test-tmp/x/: worker-events.db
docs/: architecture.md  deployment.md  quickstart-windows.md  risk-scope.md  risk_rules.md
installer/: ApexQuantel.iss  build.ps1
manager/app/: api.py  config_revisions.py  config_store.py  desired_state.py  event_hub.py  gateway_connector.py  models.py  operations.py  process_supervisor.py  provisioning.py  reconciliation.py  registry.py  secrets.py  service.py  signal_router.py  terminal_discovery.py
manager/gui/: __init__.py  app.py  assets.py  components.py  config_manager.py  manager_client.py  manager_state.py  onboarding.py  theme.py
manager/gui/pages/: activity.py  agent_dashboard.py  agents.py  logs.py  manager.py  risk.py  settings.py
scripts/: backup.ps1  check_env.py  gen_secret.py  replay_throttle.py  scan_secrets.py  service.ps1  support-bundle.ps1  update.ps1
src/: __main__.py
src/app/: bootstrap.py  container.py
src/brokers/mt5/: client.py  orders.py  positions.py  types.py
src/config/: env.py  settings.py
src/core/: event_bus.py  event_types.py  events.py
src/domain/: position.py  signal_interface.py  trade.py
src/execution/: engine.py  order_manager.py  planner.py
src/gui/: app.py  assets.py  components.py  config_manager.py  installer.py  manager_client.py  mt5_detector.py  onboarding.py  service_controller.py  state.py  theme.py  ws_client.py
src/gui/pages/: activity.py  advanced.py  agent_dashboard.py  agents.py  engine.py  home.py  logs.py  manager.py  overview.py  platform.py  risk.py  settings.py  terminal.py
src/infra/: database.py  db.py  logger.py  metrics.py  ui_bridge.py  websocket.py
src/managed/: client.py  status.py
src/manager/: agent_channel.py  api.py  config_revisions.py  config_store.py  desired_state.py  event_hub.py  migration.py  models.py  operations.py  process_supervisor.py  provisioning.py  reconciliation.py  registry.py  secrets.py  service.py  signal_router.py  terminal_discovery.py
src/positions/: manager.py  store.py
src/risk/: cluster_tracker.py  engine.py  equity_throttle.py  loss_tracker.py  rules.py
src/runtime/: __init__.py  contracts.py
src/signals/: consumer.py  internal_client.py  queue.py  signal_types.py  signal_validator.py
src/strategies/: adapter.py  router.py
src/utils/: lot_calculator.py  price.py  symbol.py  time.py
src/worker/: __init__.py  event_client.py
tests/: conftest.py
tests/integration/brokers/: __init__.py  test_mt5_client.py
tests/unit/brokers/: test_mt5_client.py
tests/unit/config/: test_managed_agent_config.py
tests/unit/execution/: __init__.py  test_engine_reliability.py  test_planner.py  test_position_manager_rr.py
tests/unit/infra/: test_ui_bridge_metrics.py
tests/unit/manager/: test_config_store.py  test_desired_state.py  test_manager_lifecycle_fixes.py  test_provisioning_license.py  test_registry_lease.py  test_runtime_ipc.py  test_secrets.py  test_service.py  test_signal_routing.py
tests/unit/risk/: __init__.py  test_cluster_tracker.py  test_equity_throttle.py  test_loss_tracker.py  test_rules.py
tests/unit/signals/: test_consumer_gateway.py  test_queue_routing.py
tests/unit/utils/: test_lot_calculator.py
